# public-geoLens-CIKM2026

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
eval/: README.md  wnut2016_id_manifest.csv
eval/adapters/: run_wnut_eval.py  wnut2016_to_geolens.py
eval/results/: wnut2016.json  wnut2016_banner.json
src/geolens/: __init__.py  app.py  cli.py  geo.py  manifest.py  stats.py
src/geolens/batch/: __init__.py  metrics.py  runner.py
src/geolens/engines/: __init__.py  _cities.py  _coords.py  _encoder.py  _stubs.py  base.py  contrastgeo.py  fewuser.py  gazetteer.py  llm_classifier.py  llm_claude.py  retrievezero.py
src/geolens/ensemble/: __init__.py  weighted_vote.py
src/geolens/onboarding/: __init__.py  wizard.py
src/geolens/triangulator/: __init__.py  consensus.py
src/geolens/ui/: __init__.py  server.py
src/geolens/ui/static/: app.js  example_test_set.csv  index.html  style.css
src/geolens/ui/static/scenarios/: crisis-response.json  estate-management.json  index.json  osint-credibility.json
tests/: test_banner_metrics.py  test_fusion.py  test_geo_metrics.py  test_manifest.py  test_onboarding_warnings.py  test_stats.py  test_stratified.py  test_triangulation.py  test_wnut_adapter.py
